[package]
name = "editoast_models"
license.workspace = true
version.workspace = true
edition.workspace = true

[features]
testing = []

[dependencies]
diesel.workspace = true
diesel-async.workspace = true
editoast_derive.workspace = true
futures.workspace = true
futures-util.workspace = true
openssl.workspace = true
postgres-openssl.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
# The feature 'testing' is needed for all of the doc-tests
editoast_models = { path = "./", features = ["testing"] }
