[package]
name = "editoast_schemas"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0"

[dependencies]
derivative.workspace = true
editoast_common.workspace = true
enum-map.workspace = true
geojson.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
utoipa.workspace = true
