[package]
name = "osm_to_railjson"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0"

[dependencies]
editoast_schemas.workspace = true
geos.workspace = true
osm4routing = "0.6.2"
osmpbfreader = "0.16.1"
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true
