[package]
name = "osm_to_railjson"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
editoast_schemas.workspace = true
geo-types = "0.7.13"
geos.workspace = true
osm4routing = "0.7.0"
osmpbfreader = "0.16.1"
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
