[package]
name = "actix_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]

# common dependencies
actix-session.workspace = true
actix-web.workspace = true
dyn-clone.workspace = true
futures-util.workspace = true
log.workspace = true
serde.workspace = true
thiserror.workspace = true

# oidc
openidconnect = { workspace = true, features = ["jwk-alg", "reqwest"] }
reqwest = { workspace = true, features = ["json"] }
url.workspace = true

# bearer
actix-web-httpauth.workspace = true # only used to parse Bearer auth headers
