[tool.poetry]
name = "railjson_generator"
version = "0.4.8"
description = ""
authors = ["OSRD <contact@osrd.fr>"]

[tool.poetry.dependencies]
osrd-schemas = { path = "../osrd_schemas/", develop = false }
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
python = ">=3.9,<3.13"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.12.0"
pyproject-flake8 = "^6.0.0.post1"
pytype = { platform = "linux", version = "^2023.10.17" }

[tool.flake8]
ignore = "W503,E203"
max-line-length = 120
exclude = [".venv/"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytype]
inputs = ["railjson_generator"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
